--- a/package.json
+++ b/package.json
@@ -1,37 +1,29 @@
 {
-  "name": "webpack-starter-kit",
+  "name": "webpack-boilerplate",
   "version": "1.0.0",
-  "description": "Project starter kit using webpack, mocha, chai, and SCSS/SASS enabled",
-  "main": "src/index.js",
+  "private": true,
+  "description": "",
+  "main": "scripts.js",
+  "author": "Hannah Hudson",
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "css-loader": "^5.2.6",
+    "eslint": "^7.27.0",
+    "file-loader": "^6.2.0",
+    "mocha": "^8.4.0",
+    "mochapack": "^2.1.2",
+    "sass": "^1.34.0",
+    "sass-loader": "^12.0.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
+  },
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack serve",
     "build": "webpack",
     "test": "mochapack 'test/**/*.js'",
     "lint": "./node_modules/.bin/eslint 'src/**.js' 'test/**.js'"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/turingschool-examples/webpack-starter-kit.git"
-  },
-  "author": "Turing School of Software and Design",
-  "license": "MIT",
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "chai-spies": "^1.0.0",
-    "css-loader": "^2.1.0",
-    "eslint": "^5.12.1",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "mocha": "^5.2.0",
-    "mochapack": "^1.0.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
-  },
-  "dependencies": {
-    "jquery": "^3.4.1"
   }
 }
